Burger menu moved and login/logout now on burger menu for small devices Reduce font size and padding for #main Fixed a number of spacing issues

--- a/app/assets/stylesheets/global/users.scss
+++ b/app/assets/stylesheets/global/users.scss
@@ -135,6 +135,11 @@
   display: none;
 }
 
+@media (max-width: $screen-sm-min - 1px) {
+  .float-xs-none {
+    float:none;
+  }
+}
 /* Responsive versions */
 
 /* End of CSS for USER PROFILE page */
